<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.kesoftware.imu</groupId>
  <artifactId>imu</artifactId>
  <packaging>jar</packaging>
  <version>2.1-SNAPSHOT</version>
  <name>imu</name>
  <url>http://kesoftware.com/imu/imu-releases.html</url>

  
  	<properties>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.release.version>17</java.release.version>
  	</properties>
  
	<repositories>
		<repository>
			<id>k-int-public</id>
			<name>k-int public</name>
			<url>http://maven.k-int.com/content/groups/public</url>
		</repository>

		<repository>
			<id>k-int-release</id>
			<name>k-int Releases Repositoy</name>
			<url>http://nexus.k-int.com/content/repositories/releases/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>k-int-repository</id>
			<name>Knowledge Integration Maven2 Repository</name>
			<url>http://maven.k-int.com/content/repositories/private</url>
		</repository>
  	</distributionManagement>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
	  <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.0.0-M1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
	</plugins>
  </build>
  
  <scm>
      <connection>scm:git:https://github.com/k-int/imu-api-java</connection>
      <tag>HEAD</tag>
  </scm>
</project>
